feat(java-version): Downgrade Java version
Downgrade Java version from 17 to 11 and Spring Boot from 3.2.0 to 2.7.8